--- a/school.css
+++ b/school.css
@@ -12,8 +12,6 @@
 
 table {
     border: 1px black solid;
-    /*text-overflow-mode: wrap;*/
-    column-width: 800px;
     background-color: inherit;
     margin-left:33%;
     margin-right:33%;
@@ -27,12 +25,8 @@ td {
 .fancy {
     background-color: darkkhaki;
     padding-top: 0;
-
 }
 
-.students {
-    padding-bottom: 18px;
-}
 
 #studentInputs {
     size: 131px 113px;
@@ -60,5 +54,5 @@ td {
 }
 
 #searchMain {
-
+    position: relative;
 }
